# inventory-management-system

./: dockerfile  inventery.py  pyproject.toml
